Add changes that reflect the mentor's review

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         <activity
             android:name=".TracklistActivity"
             android:label="Tracklist" />
+        <activity
+            android:name=".PlayActivity"
+            android:label="Now Playing" />
     </application>
 
 </manifest>
